--- a/services/problem-manager/CMakeLists.txt
+++ b/services/problem-manager/CMakeLists.txt
@@ -1,21 +1,23 @@
 cmake_minimum_required(VERSION 3.20)
-project(problem_manager CXX)
+project(problem-manager CXX)
+
+# (1) Toolchain de vcpkg (ruta relativa desde este CMakeLists al vcpkg del repo)
+set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/../vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "vcpkg toolchain")
+
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(problem_manager src/main.cpp)
+add_executable(problem-manager
+    src/main.cpp
+)
 
-# Headers de un solo archivo (sin vcpkg)
-target_include_directories(problem_manager PRIVATE
-  ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
+# (2) Drivers MongoDB
+find_package(mongocxx CONFIG REQUIRED)
+find_package(bsoncxx CONFIG REQUIRED)
 
-# Necesario en Windows para sockets
-if (MSVC)
-  # Windows 10+
-  target_compile_definitions(problem_manager PRIVATE
-    _WIN32_WINNT=0x0A00
-    WIN32_LEAN_AND_MEAN
-    NOMINMAX
-  )
-  target_link_libraries(problem_manager PRIVATE ws2_32)
-endif()
+target_link_libraries(problem-manager PRIVATE mongo::mongocxx_shared mongo::bsoncxx_shared)
 
+# (3) Si usas httplib.h y json.hpp como headers locales:
+target_include_directories(problem-manager PRIVATE
+    ${CMAKE_SOURCE_DIR}/third_party
+)
